@@ -5,7 +5,7 @@
  * used by the SAX parser to generate reports from the XML report file.
  *
  * phpGedView: Genealogy Viewer
- * Copyright (C) 2002 to 2008  PGV Development Team.  All rights reserved.
+ * Copyright (C) 2002 to 2009  PGV Development Team.  All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -124,7 +124,8 @@ class PGVReportBase {
 	}
 
 	function setProcessing($p) {
-		$this->processing = $p;
+		// [ 2637256 ] Extended Relatives Report Header Overwritten
+		//$this->processing = $p;
 	}
 
 	function addElement(&$element) {
@@ -586,18 +587,18 @@ $elementHandler["PGVRFootnote"]["end"]		= "PGVRFootnoteEHandler";
 $elementHandler["PGVRFootnoteTexts"]["start"]	= "PGVRFootnoteTextsSHandler";
 $elementHandler["br"]["start"]				= "brSHandler";
 $elementHandler["sp"]["start"]				= "spSHandler";
-$elementHandler["PGVRPageHeader"]["start"] 		= "PGVRPageHeaderSHandler";
-$elementHandler["PGVRPageHeader"]["end"] 		= "PGVRPageHeaderEHandler";
-$elementHandler["PGVRHighlightedImage"]["start"] 		= "PGVRHighlightedImageSHandler";
+$elementHandler["PGVRPageHeader"]["start"] 	= "PGVRPageHeaderSHandler";
+$elementHandler["PGVRPageHeader"]["end"] 	= "PGVRPageHeaderEHandler";
+$elementHandler["PGVRHighlightedImage"]["start"] = "PGVRHighlightedImageSHandler";
 $elementHandler["PGVRImage"]["start"] 		= "PGVRImageSHandler";
 $elementHandler["PGVRLine"]["start"] 		= "PGVRLineSHandler";
 $elementHandler["PGVRList"]["start"] 		= "PGVRListSHandler";
-$elementHandler["PGVRList"]["end"] 		= "PGVRListEHandler";
-$elementHandler["PGVRListTotal"]["start"]       = "PGVRListTotalSHandler";
-$elementHandler["PGVRRelatives"]["start"] 		= "PGVRRelativesSHandler";
-$elementHandler["PGVRRelatives"]["end"] 		= "PGVRRelativesEHandler";
-$elementHandler["PGVRGeneration"]["start"]      = "PGVRGenerationSHandler";
-$elementHandler["PGVRNewPage"]["start"]			= "PGVRNewPageSHandler";
+$elementHandler["PGVRList"]["end"] 			= "PGVRListEHandler";
+$elementHandler["PGVRListTotal"]["start"]	= "PGVRListTotalSHandler";
+$elementHandler["PGVRRelatives"]["start"] 	= "PGVRRelativesSHandler";
+$elementHandler["PGVRRelatives"]["end"] 	= "PGVRRelativesEHandler";
+$elementHandler["PGVRGeneration"]["start"]	= "PGVRGenerationSHandler";
+$elementHandler["PGVRNewPage"]["start"]		= "PGVRNewPageSHandler";
 
 $pgvreportStack = array();
 $currentElement = new PGVRElement();
@@ -1248,16 +1249,23 @@ function PGVRvarSHandler($attrs) {
 }
 
 function PGVRvarLetterSHandler($attrs) {
-	global $currentElement, $factarray, $fact, $desc;
+	global $currentElement, $factarray, $factAbbrev, $fact, $desc;
 
 	$var = $attrs["var"];
 	if (!empty($var)) {
 		$tfact = $fact;
 		$var = preg_replace(array("/\[/","/\]/","/@fact/","/@desc/"), array("['","']",$tfact,$desc), $var);
-		eval("if (!empty(\$$var)) \$var = \$$var;");
-
-		$letter = get_first_letter($var);
-
+		
+		$abbr = str_replace("factarray", "factAbbrev", $var);
+		eval("if (!empty(\$$abbr)) {
+				\$var = \$$abbr;
+				\$letter = \$var;
+			}
+			else if (!empty(\$$var)) {
+				\$var = \$$var;
+				\$letter = get_first_letter(\$var);
+			}"
+		);
 		$currentElement->addText($letter);
 	}
 }
